Fix safari bug with overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,8 @@
 
 .results-category-box img {
   width: 100%;
+  border-top-left-radius: 18px;
+  border-top-right-radius: 18px;
 }
 
 .results-category-box-text {
